<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.treasure</groupId>
    <artifactId>TreasureParticles</artifactId>
    <version>1.0.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>common</module>
        <module>plugin</module>
        <module>v1_20_R1</module>
        <module>v1_19_R3</module>
        <module>v1_19_R2</module>
        <module>v1_19_R1</module>
        <module>v1_18_R2</module>
        <module>v1_18_R1</module>
        <module>v1_17_R1</module>
        <module>v1_16_R2</module>
        <module>v1_16_R1</module>
        <module>v1_16_R3</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>

    <build>
        <defaultGoal>clean install</defaultGoal>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>nms-repo</id>
            <url>https://repo.codemc.org/repository/nms/</url>
        </repository>
    </repositories>
</project>